--- a/commerce/package.json
+++ b/commerce/package.json
@@ -25,49 +25,52 @@
     "seed": "ts-node src/database/seed.ts"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.1",
     "@nestjs/common": "^10.2.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.2.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.2.0",
-    "@nestjs/config": "^3.1.1",
-    "@nestjs/axios": "^3.0.1",
+    "@nestjs/swagger": "^7.4.2",
     "@nestjs/typeorm": "^10.0.0",
     "@prisma/client": "^5.20.0",
     "@stripe/stripe-js": "^3.0.0",
-    "stripe": "^13.0.0",
-    "paypal-rest-sdk": "^1.7.0",
     "axios": "^1.6.2",
-    "class-validator": "^0.14.0",
     "class-transformer": "^0.5.1",
-    "passport": "^0.7.0",
-    "passport-jwt": "^4.0.0",
+    "class-validator": "^0.14.0",
+    "compression": "^1.7.4",
     "dotenv": "^16.0.0",
     "helmet": "^7.0.0",
-    "compression": "^1.7.4",
-    "typeorm": "^0.3.0",
     "mysql2": "^3.0.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.0",
+    "paypal-rest-sdk": "^1.7.0",
     "pg": "^8.11.3",
     "redis": "^4.6.0",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "uuid": "^9.0.0",
-    "reflect-metadata": "^0.1.13"
+    "stripe": "^13.0.0",
+    "swagger-ui-express": "^5.0.1",
+    "typeorm": "^0.3.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@types/node": "^20.0.0",
     "@types/express": "^4.17.0",
     "@types/jest": "^29.0.0",
+    "@types/multer": "^2.0.0",
+    "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.0.0",
     "jest": "^29.0.0",
-    "ts-jest": "^29.0.0",
-    "ts-node": "^10.0.0",
-    "ts-loader": "^9.0.0",
     "prisma": "^5.20.0",
+    "ts-jest": "^29.0.0",
+    "ts-loader": "^9.0.0",
+    "ts-node": "^10.0.0",
     "typescript": "^5.1.0"
   }
 }
