--- a/commerce/tsconfig.json
+++ b/commerce/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "declaration": true,
+    "declaration": false,
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -21,5 +21,12 @@
       "@payments/*": ["src/payments/*"],
       "@bookings/*": ["src/bookings/*"]
     }
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "dist",
+    "prisma",
+    "**/*.spec.ts",
+    "**/*.test.ts"
+  ]
 }
