--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,10 @@ services:
     image: mysql:8.0
     container_name: traveease-mysql
     environment:
-      MYSQL_ROOT_PASSWORD: traveease_root_2026
-      MYSQL_DATABASE: traveease_commerce
-      MYSQL_USER: traveease_user
-      MYSQL_PASSWORD: traveease_pass_secure
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-PLEASE_SET_MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE:-traveease_commerce}
+      MYSQL_USER: ${MYSQL_USER:-traveease_user}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD:-PLEASE_SET_MYSQL_PASSWORD}
     ports:
       - "3306:3306"
     volumes:
@@ -30,22 +30,24 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     container_name: traveease-backend
+    env_file:
+      - ./.env
     environment:
       # Amadeus
-      AMADEUS_API_KEY: ${AMADEUS_API_KEY:-K7XmZ2aBcDeFgHiJkLmNoPqRsTuVwXyZ}
-      AMADEUS_API_SECRET: ${AMADEUS_API_SECRET:-AmadeusTestSecretKey2026}
+      AMADEUS_API_KEY: ${AMADEUS_API_KEY}
+      AMADEUS_API_SECRET: ${AMADEUS_API_SECRET}
       # Travel APIs
-      VIATOR_API_KEY: ${VIATOR_API_KEY:-VIA_TEST_123456789ABCDEF}
-      TREEPZ_API_KEY: ${TREEPZ_API_KEY:-TREEPZ_TEST_KEY_ABC123}
-      TRAVU_API_KEY: ${TRAVU_API_KEY:-TRAVU_TEST_KEY_XYZ789}
+      VIATOR_API_KEY: ${VIATOR_API_KEY}
+      TREEPZ_API_KEY: ${TREEPZ_API_KEY}
+      TRAVU_API_KEY: ${TRAVU_API_KEY}
       # Payment Gateways
-      STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY:-sk_REDACTED}
-      PAYPAL_CLIENT_ID: ${PAYPAL_CLIENT_ID:-ASc_CLIENT_TEST_ID_1234567890}
-      FLUTTERWAVE_SECRET_KEY: ${FLUTTERWAVE_SECRET_KEY:-FLWSECK_REDACTED}
-      PAYSTACK_SECRET_KEY: ${PAYSTACK_SECRET_KEY:-sk_REDACTED}
+      STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY}
+      PAYPAL_CLIENT_ID: ${PAYPAL_CLIENT_ID}
+      FLUTTERWAVE_SECRET_KEY: ${FLUTTERWAVE_SECRET_KEY}
+      PAYSTACK_SECRET_KEY: ${PAYSTACK_SECRET_KEY}
       # Logging
-      LOG_LEVEL: INFO
-      NDPR_ENCRYPTION_KEY: ${NDPR_ENCRYPTION_KEY:-your-256-bit-key-here}
+      LOG_LEVEL: ${LOG_LEVEL:-INFO}
+      NDPR_ENCRYPTION_KEY: ${NDPR_ENCRYPTION_KEY}
     ports:
       - "8000:8000"
     volumes:
@@ -69,19 +71,22 @@ services:
       context: ./commerce
       dockerfile: Dockerfile
     container_name: traveease-commerce
+    env_file:
+      - ./.env
     environment:
       NODE_ENV: production
-      DATABASE_URL: mysql://traveease_user:traveease_pass_secure@mysql:3306/traveease_commerce
+      PORT: ${COMMERCE_PORT:-3001}
+      DATABASE_URL: mysql://${MYSQL_USER:-traveease_user}:${MYSQL_PASSWORD:-PLEASE_SET_MYSQL_PASSWORD}@mysql:3306/${MYSQL_DATABASE:-traveease_commerce}
       # Payment Gateways
-      STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY:-sk_REDACTED}
-      PAYPAL_CLIENT_ID: ${PAYPAL_CLIENT_ID:-ASc_CLIENT_TEST_ID_1234567890}
-      FLUTTERWAVE_SECRET_KEY: ${FLUTTERWAVE_SECRET_KEY:-FLWSECK_REDACTED}
-      PAYSTACK_SECRET_KEY: ${PAYSTACK_SECRET_KEY:-sk_REDACTED}
+      STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY}
+      PAYPAL_CLIENT_ID: ${PAYPAL_CLIENT_ID}
+      FLUTTERWAVE_SECRET_KEY: ${FLUTTERWAVE_SECRET_KEY}
+      PAYSTACK_SECRET_KEY: ${PAYSTACK_SECRET_KEY}
       # Logging
-      LOG_LEVEL: info
-      NDPR_ENCRYPTION_KEY: ${NDPR_ENCRYPTION_KEY:-your-256-bit-key-here}
+      LOG_LEVEL: ${LOG_LEVEL:-info}
+      NDPR_ENCRYPTION_KEY: ${NDPR_ENCRYPTION_KEY}
     ports:
-      - "3001:3001"
+      - "3001:${COMMERCE_PORT:-3001}"
     volumes:
       - ./commerce:/app
       - commerce_logs:/app/logs
@@ -91,7 +96,7 @@ services:
       mysql:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3001/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:${COMMERCE_PORT:-3001}/api/v1/bookings/health"]
       timeout: 10s
       retries: 5
       interval: 10s
@@ -103,9 +108,11 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     container_name: traveease-frontend
+    env_file:
+      - ./.env
     environment:
-      NEXT_PUBLIC_API_URL: http://localhost:3001
-      NEXT_PUBLIC_AGENTIC_URL: http://localhost:8000
+      NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-http://localhost:3001}
+      NEXT_PUBLIC_AGENTIC_URL: ${NEXT_PUBLIC_AGENTIC_URL:-http://localhost:8000}
     ports:
       - "3000:3000"
     volumes:
